--- a/Home.html
+++ b/Home.html
@@ -58,7 +58,7 @@
       <section class="jumbotron text-center">
         <img class="rounded-circle img-thumbnail mb-3 animate__animated animate__fadeInDown animate__slower" src="img/IMG_3161 (2).JPG" alt="xsaatu" width="210">
         <h1 class="display-4 animate__animated animate__lightSpeedInRight animate__slow animate__delay-1s">xsaatu</h1>
-        <p class="lead animate__animated animate__lightSpeedInLeft animate__slow animate__delay-1s">Gamer | Web Programing</p>
+        <p class="lead animate__animated animate__lightSpeedInLeft animate__slow animate__delay-1s">Web Programing</p>
 
         <svg id="one" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L34.3,202.7C68.6,213,137,235,206,224C274.3,213,343,171,411,160C480,149,549,171,617,186.7C685.7,203,754,213,823,229.3C891.4,245,960,267,1029,250.7C1097.1,235,1166,181,1234,160C1302.9,139,1371,149,1406,154.7L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z" style="--darkreader-inline-fill: #1a1d1e;"></path></svg>
       </section>
