--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-4" data-aos="fade-right" data-aos-duration="2000">
-              <p>Selamat datang di portfolio saya! <br> Perkenalkan saya Yuna a.k.a Xsaatu. Saya adalah seorang pelajar di Bekasi. Saya mempunyai cita - cita menjadi full-stack developer.<br> Jangan lupa follow <a id="aabout" href="https://www.instagram.com/x.saatu/" target="_blank">Instagram</a> saya, itung - itung nambah followers hehehe</p>
+              <p>Selamat datang di portfolio saya! <br> Perkenalkan saya Yuna. Saya adalah seorang pelajar di Bekasi. Saya mempunyai cita - cita menjadi full-stack developer.<br> Jangan lupa follow <a id="aabout" href="https://www.instagram.com/x.saatu/" target="_blank">Instagram</a> saya, itung - itung nambah followers hehehe</p>
             </div>
           </div>
         </div>
